# br_mkdb

./:  [conflicted].gitignore  .coverage  .drone.yml  .env  .gitignore  .gitmodules  .~lock.db_design.ods#  DefColumns.md  Dockerfile  Makefile  Pipfile  Readme.md  Reame.md  db_design.ods  docker-compose.yml  docker-compose_wo_gpu.yml  down_gsql.sh  jyo_master.csv  pyproject.toml  start_docker.sh  start_gsql.sh
.docker/.jupyter/: migrated
.github/workflows/: codeql-analysis.yml
.jupyter/: .bash_history  jupyter_notebook_config.py  migrated
.jupyter/.jupyter/: jupyter_notebook_config.py
.jupyter/custom/: custom.css
hack/: format
proxy/: down_gsql.sh  start_gsql.sh
src/: Untitled.ipynb  db_control_test.py  db_selector.py  main.py  past.py  which_db.py
src/application/: argument.py  usecase.py
src/domain/: const.py  dbcontroller.py  dbctl.py  getter.py  memo.txt  parser.py  tablecreator.py
src/infrastructure/: connect.py  connector.py  const.py  dbcontroller.py  dt2sql.py  getdata_lxml.py  getter.py  tablecreator.py  tablecreator_impl.py
src/jupyter/: Untitled.ipynb  datelist.ipynb  getholdplace.ipynb  mysql_test.ipynb  officialchokuzen_parse.ipynb  officialodds_parse.ipynb  officialprogram_parse.ipynb  officialresult.ipynb  qiita用.ipynb  requirements.txt  sample.json  sample_htmlparse.ipynb  setting_cofirmation.ipynb
src/module/: __init__.py  connect.py  const.py  dbcontroller.py  dt2mysql.py  dt2sql (conflicted).py  dt2sql.py  getdata.py  getdataTodo.md  getdata_lxml.py  getter.py  impdt2sql.py  log.py  master2sql.py
src/test/: common.py  (+6 more)
(+191 files in other folders)
