[tool.poetry]
name = "br_mkdb"
version = "0.1.0"
description = ""
authors = ["Yashikab <yashikaba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"
beautifulsoup4 = "^4.9.3"
numpy = "^1.20.0"
pandas = "^1.2.1"
mysql-connector = "^2.2.9"
coloredlogs = "^15.0"
lxml = "^4.6.2"
cssselect = "^1.1.0"
tqdm = "^4.56.0"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pycodestyle = "^2.6.0"
autoflake = "^1.4"
autopep8 = "^1.5.4"
isort = "^5.7.0"
pytest-mock = "^3.5.1"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
